# beam-mysql

./: .gitignore  CHANGELOG.md  Dockerfile  LENIENT.md  LICENSE  Makefile  README.md  TODO.md  beam-mysql.cabal  build.nix  euler.yaml  flake.nix  init.sql  stack.yaml
Database/Beam/MySQL/: Connection.hs  FromField.hs  Syntax.hs
bench/: DBConfig.hs  TmpMySQL.hs
bench/beam-insert/: Main.hs
bench/beam-insert-row-returning/: Main.hs
bench/insert/: Main.hs
bench/raw-insert/: Main.hs
bench/select/: Main.hs
db/: DB.hs
db/DB/: AltParser.hs  BadSchema.hs  BadSchemaBig.hs  BadSchemaNullable.hs  Bobby.hs  Latin1.hs  Lenient.hs  Nullable.hs  NullableMaybe.hs  Unicode.hs  ViaJSON.hs
db/DB/PrimaryKey/: AutoInc.hs  NoAutoInc.hs  None.hs
nix/: config.nix  custom-haskell-overlay.nix  euler-gen-info  overlay.nix  sources.yaml
pool/: Pool.hs
results/: insert-lenient.html  insert-strict.html  select-lenient.html  select-strict.html
src/Data/: FakeUTC.hs  ViaJson.hs  ViaJsonArray.hs
src/Database/Beam/: MySQL.hs
src/Database/Beam/MySQL/: Connection.hs  Extra.hs  FromField.hs  Syntax.hs  TextHandling.hs  Utils.hs
src/Database/Beam/MySQL/FromField/: DecodeError.hs  Lenient.hs  Strict.hs
src/Database/Beam/MySQL/Syntax/: DataType.hs  Delete.hs  Expression.hs  Insert.hs  Misc.hs  Projection.hs  Render.hs  Select.hs  Update.hs  Value.hs
temp-db/Database/MySQL/: Temp.hs
test/: Main.hs
test/alt-parser/: Main.hs
test/bad-schemata/: Main.hs
test/bobby-tables/: Main.hs
test/escaping-dsl/: Main.hs
test/gen-insert/: Main.hs
test/gen-select/: Main.hs
test/generation/: Main.hs
test/latin1/: Main.hs
test/leniency/: Main.hs
test/nullable/: Main.hs
test/run-insert-returning/: Main.hs
test/text-escaping/: Main.hs
test/unicode/: Main.hs
test/via-json/: Main.hs
