cabal-version: 3.0
name:          beam-mysql
version:       1.2.3.1
synopsis:      Connection layer between beam and MySQL/MariaDB
description:
  Beam driver for MySQL or MariaDB databases, two popular open-source databases.
  Supports most beam features, but does not yet have support for "beam-migrate".

homepage:      https://github.com/juspay/beam-mysql
bug-reports:   https://github.com/juspay/beam-mysql/issues
license:       MIT
license-file:  LICENSE
author:        Travis Athougies, Juspay Technologies Pvt Ltd
maintainer:    koz.ross@retro-freedom.nz
copyright:
  (C) Travis Authologies 2018 (C) Juspay Technologies Pvt Ltd 2020-21

category:      Database
build-type:    Simple
tested-with:   GHC ==8.8.4

source-repository head
  type:     git
  location: https://github.com/juspay/beam-mysql 

-- Common sections

common common-lang
  ghc-options:
    -Wall -Wcompat -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints -Werror
    -fplugin=RecordDotPreprocessor

  build-depends:
    , base                     >=4.13     && <5
    , beam-core                ^>=0.9.0.0
    , generics-sop             ^>=0.5.1.0
    , mysql-haskell            ^>=0.8.4.2
    , record-dot-preprocessor  ^>=0.2.7
    , record-hasfield          ^>=1.0
    , safe-exceptions          ^>=0.1.7.0
    , text                     ^>=1.2.4.0
    , unordered-containers     ^>=0.2.10.0

  default-extensions:
    DataKinds
    DeriveFunctor
    DeriveGeneric
    DerivingStrategies
    DuplicateRecordFields
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    InstanceSigs
    LambdaCase
    MultiParamTypeClasses
    OverloadedStrings
    TupleSections
    TypeApplications
    TypeFamilies
    TypeSynonymInstances
    UndecidableInstances

  default-language:   Haskell2010

common common-test
  import:        common-lang
  ghc-options:   -threaded -O2 -with-rtsopts=-N
  build-depends:
    , beam-mysql
    , db
    , tasty

-- Flags

flag lenient
  description: Be lenient when decoding (see LENIENT.md for description).
  default:     False

-- Libraries

library
  import:          common-lang
  exposed-modules: Database.Beam.MySQL
  other-modules:
    Data.FakeUTC
    Data.ViaJson
    Database.Beam.MySQL.Connection
    Database.Beam.MySQL.Extra
    Database.Beam.MySQL.FromField
    Database.Beam.MySQL.Syntax
    Database.Beam.MySQL.Syntax.DataType
    Database.Beam.MySQL.Syntax.Delete
    Database.Beam.MySQL.Syntax.Insert
    Database.Beam.MySQL.Syntax.Misc
    Database.Beam.MySQL.Syntax.Render
    Database.Beam.MySQL.Syntax.Select
    Database.Beam.MySQL.Syntax.Update
    Database.Beam.MySQL.Syntax.Value
    Database.Beam.MySQL.TextHandling
    Database.Beam.MySQL.Utils

  build-depends:
    , aeson            ^>=1.4.7.1 || ^>=1.5.0.0
    , binary           ^>=0.8.7.0
    , bytestring       ^>=0.10.10.0
    , fmt              ^>=0.6.1.2
    , free             ^>=5.1.3
    , hashable         ^>=1.3.0.0
    , int-cast         ^>=0.2.0.0
    , io-streams       ^>=1.5.1.0
    , mason            ^>=0.2.3
    , mtl              ^>=2.2.2
    , mysql-haskell    ^>=0.8.4.2
    , safe-exceptions  ^>=0.1.7.0
    , scientific       ^>=0.3.6.2
    , text             ^>=1.2.4.0
    , time             ^>=1.9.3
    , vector           ^>=0.12.1.2

  if flag(lenient)
    cpp-options: -DLENIENT

  hs-source-dirs:  src

library db
  import:          common-lang
  visibility:      private
  exposed-modules:
    DB
    DB.Bobby
    DB.Nullable
    DB.ViaJSON

  build-depends:
    , aeson
    , beam-mysql

  hs-source-dirs:  db

library pool
  import:          common-lang
  visibility:      private
  exposed-modules: Pool
  build-depends:
    , BoundedChan
    , lifted-base
    , monad-control
    , transformers-base

  hs-source-dirs:  pool

-- Test suites

test-suite generation
  import:         common-test
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  build-depends:
    , aeson
    , tasty-hunit

  hs-source-dirs: test/generation

test-suite nullable
  import:         common-test
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  build-depends:
    , safe-exceptions
    , tasty-hunit

  hs-source-dirs: test/nullable

test-suite via-json
  import:         common-test
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  build-depends:
    , aeson
    , hedgehog
    , lifted-base
    , pool
    , scientific
    , tasty-hedgehog
    , vector

  hs-source-dirs: test/via-json

-- test-suite bobby-tables
--   import:         common-test
--   type:           exitcode-stdio-1.0
--   main-is:        Main.hs
--   hs-source-dirs: test/bobby-tables
-- 
-- test-suite unicode
--   import:         common-tasty-test
--   type:           exitcode-stdio-1.0
--   main-is:        Main.hs
--   build-depends:
--     , fmt
--     , split
--     , tasty-hunit
-- 
--   hs-source-dirs: test/unicode
-- 
-- test-suite run-insert-returning
--   import:         common-test
--   type:           exitcode-stdio-1.0
--   main-is:        Main.hs
--   hs-source-dirs: test/run-insert-returning
-- 
-- test-suite bad-schemata
--   import:         common-test
--   type:           exitcode-stdio-1.0
--   main-is:        Main.hs
--   hs-source-dirs: test/bad-schemata
-- 
--   if flag(lenient)
--     buildable: False
-- 
-- test-suite leniency
--   import:         common-test
--   type:           exitcode-stdio-1.0
--   main-is:        Main.hs
--   build-depends:
--     , ieee754  ^>=0.8.0
--     , vector
-- 
--   hs-source-dirs: test/leniency
-- 
--   if !flag(lenient)
--     buildable: False
-- 
-- test-suite latin1
--   import:         common-test
--   type:           exitcode-stdio-1.0
--   main-is:        Main.hs
--   build-depends:
--     , bytestring
--     , vector
-- 
--   hs-source-dirs: test/latin1
-- 
-- -- Benchmarks
-- 
-- benchmark insert
--   import:         common-bench
--   type:           exitcode-stdio-1.0
--   main-is:        Main.hs
--   hs-source-dirs: bench/insert
-- 
-- benchmark select
--   import:         common-bench
--   type:           exitcode-stdio-1.0
--   main-is:        Main.hs
--   hs-source-dirs: bench/select
